--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,9 +12,10 @@ spring:
       ddl-auto: update
     show-sql: true
 
-openai:
+openrouter:
   api:
     key: ${OPENROUTER_API_KEY}
+
 
 jwt:
   secret: ${JWT_SECRET}
